Fix banner/header title/subtitle/image not visible on mobile due to enjoy/intro
Move enjoy/intro to main content area on mobile, hide for higher resolutions
Hide original enjoy/intro on mobile
Add button to banner/header to scroll to new enjoy/intro, display only on small/
xsmall
Override new button font color to make white
Set header height to display only the header (no content) on initial load

--- a/css/style-small.css
+++ b/css/style-small.css
@@ -27,11 +27,11 @@
 /* Header */
 
 	#header {
-		height: 80vh;
+		height: 100vh;
 	}
 
 		#header:after {
-			height: 80vh;
+			height: 100vh;
 		}
 
 		#header header {
@@ -46,9 +46,9 @@
 				margin-top: 1em;
 			}
 
-		/*#header .container {*/
-		/*	display: none;*/
-		/*}*/
+		#header .container {
+			display: none;
+		}
 		
 		#header .container .button {
 		  width: 100%;
@@ -72,3 +72,15 @@
 	  padding: 1em 0 0 0;
 	  width: 100%;
 		}
+
+	#mobilebutton {
+  display:block;
+  padding-top: 2em;
+  }
+  
+  #mobileintro {
+    display:block;
+  }
+  #mobilebutton > ul > li > a {
+    color: white !important;
+  }
