--- a/css/style.css
+++ b/css/style.css
@@ -1249,3 +1249,12 @@
 /*.container {*/
 /*  width: 40em;*/
 /*}*/
+
+/*Mobile Button*/
+#mobilebutton {
+  display:none;
+}
+
+#mobileintro {
+  display:none;
+}
